--- a/src/styles/_system.sass
+++ b/src/styles/_system.sass
@@ -1,9 +1,36 @@
 $background: #ffffff
-$color: #000000
+$globalBackground: #F4F4F4
+$color: #273F69
 
-$accent: #252A3D
+$yellow: #EF9C1B
 
-$gray700: #585858
-$gray500: #737373
-$gray200: #A0A0A0
-$grayBg : #D9D9D9
+$accent: #03A69E
+$green: #2AC11633
+
+$grey700: #585858
+$grey500: #737373
+$grey200: #A0A0A0
+$greyBg : #D9D9D9
+
+$fontBold: var(--font-bold)
+$fontRegular: var(--font-regular)
+$fontMedium: var(--font-medium)
+
+@mixin headerNav()
+	position: relative
+	display: block
+
+	text-decoration: none
+
+	&::after
+		content:''
+		position: absolute
+		width: 0
+		left: 0
+		right: 0
+		bottom: -1px
+		height: 2px
+		background: $accent
+		transition: width .3s ease-in-out
+	&:hover::after
+		width: 100%
