--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -1,1 +1,36 @@
 @import "./reset"
+@import "./_system"
+
+body
+	font-family: $fontRegular
+	color: $color
+	background: $globalBackground
+
+	max-width: 100vw
+	height: 100%
+
+
+
+.container
+	width: min(1170px,98%)
+	margin: 0 auto
+	background: $background
+	height: 100%
+
+main
+	flex-grow: 1
+.wrapper
+	display: flex
+	flex-direction: column
+	min-height: 100vh
+
+::selection
+	background: $accent
+	color: $background
+::-webkit-scrollbar
+	width: 9px
+	background: $background
+
+::-webkit-scrollbar-thumb
+	background: $accent
+	width: 9px
