--- a/src/components/Sidebar/Sidebar.sass
+++ b/src/components/Sidebar/Sidebar.sass
@@ -42,15 +42,7 @@
 			display: flex
 			flex-wrap: wrap
 			gap: 10px
-			.sidebar__tag
-				padding: 5px 20px
-				background: $grey
-				color: #888888
-				border-radius: 52px
-				transition: transform .4s
-				&:hover
-					cursor: pointer
-					transform: scale(0.95)
+			
 	.sidebar__authors
 		.sidebar__authors-list
 			display: grid
@@ -69,4 +61,4 @@
 				.sidebar__author-sub
 					display: flex
 					align-items: center
-					gap: 0 10px
+					gap: 0
