--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -37,4 +37,6 @@
 				font-weight: 500
 				font-size: 20px
 				@include headerNav()
-				
+@media screen and (width <= 1030px)
+	.header__nav
+		display: none !important
