Add 50% blog, new UI components

--- a/src/components/Footer/Footer.sass
+++ b/src/components/Footer/Footer.sass
@@ -5,3 +5,11 @@
 	background: $background
 
 	flex-shrink: 0
+
+	height: 100px
+
+	margin-top: 50px
+
+	display: flex
+	justify-content: center
+	align-items: center
