--- a/src/styles/_system.sass
+++ b/src/styles/_system.sass
@@ -9,6 +9,7 @@ $green: #2AC11633
 
 $grey700: #585858
 $grey500: #737373
+$greyTxt: #888888
 $grey200: #A0A0A0
 $greyBg : #D9D9D9
 $grey   : #EAEAEA
@@ -20,6 +21,8 @@ $fontMedium: var(--font-medium)
 @mixin badge()
 	background: $background
 	border-radius: 8px
+
+
 @mixin headerNav()
 	position: relative
 	display: block
