--- a/src/components/ui/Tag/Tag.sass
+++ b/src/components/ui/Tag/Tag.sass
@@ -2,7 +2,7 @@
 .tag
 	padding: 5px 20px
 	background: $grey
-	color: #888888
+	color: $greyTxt
 	border-radius: 52px
 	transition: transform .4s
 	&:hover
