Add Subscribes (UI)

--- a/src/components/Sidebar/Sidebar.sass
+++ b/src/components/Sidebar/Sidebar.sass
@@ -62,7 +62,9 @@
 					display: flex
 					align-items: center
 					gap: 0
-
+	.sidebar__subscribes
+		display: grid
+		row-gap: 20px
 @media screen and (width <= 1030px)
 	.sidebar
 		display: none
