--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -17,9 +17,9 @@ body
 	width: min(1170px,98%)
 	margin: 0 auto
 	height: 100%
-
-main
+.content
 	flex-grow: 1
+main
 	width: calc( 100% - 400px )
 	
 	// padding: 20px
