--- a/src/styles/_system.sass
+++ b/src/styles/_system.sass
@@ -13,6 +13,7 @@ $greyTxt: #888888
 $grey200: #A0A0A0
 $greyBg : #D9D9D9
 $grey   : #EAEAEA
+$lightGr: #F3F4F6
 
 $fontBold: var(--font-bold)
 $fontRegular: var(--font-regular)
