--- a/src/components/Sidebar/Sidebar.sass
+++ b/src/components/Sidebar/Sidebar.sass
@@ -65,6 +65,6 @@
 	.sidebar__subscribes
 		display: grid
 		row-gap: 20px
-@media screen and (width <= 1030px)
+@media screen and (width <= $md)
 	.sidebar
 		display: none
