--- a/src/styles/_system.sass
+++ b/src/styles/_system.sass
@@ -19,6 +19,8 @@ $fontBold: var(--font-bold)
 $fontRegular: var(--font-regular)
 $fontMedium: var(--font-medium)
 
+$md: 1030px
+
 @mixin badge()
 	background: $background
 	border-radius: 8px
