Small fixes (styles)

--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -11,6 +11,15 @@ body
 	height: 100%
 
 
+.badge
+	@include badge()
+.not-found
+	padding: 20px
+	h1
+		font-weight: 500
+		span
+			font-weight: 700
+	font-size: 50px
 .posts
 	display: grid
 	row-gap: 30px
