--- a/src/components/ui/Tag/Tag.sass
+++ b/src/components/ui/Tag/Tag.sass
@@ -1,10 +1,13 @@
-@import "./../../../styles/_system.sass"
-.tag
-	padding: 5px 20px
-	background: $grey
-	color: $greyTxt
-	border-radius: 52px
-	transition: transform .4s
-	&:hover
-		cursor: pointer
-		transform: scale(0.95)
+@import "src/styles/_system.sass"
+.tags
+	display: flex
+	column-gap: 5px
+	.tag
+		padding: 5px 20px
+		background: $grey
+		color: $greyTxt
+		border-radius: 52px
+		transition: transform .4s
+		&:hover
+			cursor: pointer
+			transform: scale(0.95)
