--- a/src/components/ui/Actions/Actions.sass
+++ b/src/components/ui/Actions/Actions.sass
@@ -9,7 +9,11 @@
 	span
 		font-size: 15px
 		font-weight: 700
+		cursor: pointer
+
 	time, span
 		display: flex
 		align-items: center
 		column-gap: 2px
+		img
+			margin-right: 1px
