--- a/src/components/ui/Post/Post.sass
+++ b/src/components/ui/Post/Post.sass
@@ -25,9 +25,7 @@
 			margin-bottom: 12px
 			color: $greyTxt
 			font-weight: 400
-		.post__tags
-			display: flex
-			gap: 5px
+		.tags
 			margin-bottom: 12px
 		p
 			font-size: 16px
