--- a/src/components/ui/Albums/Albums.sass
+++ b/src/components/ui/Albums/Albums.sass
@@ -10,49 +10,54 @@
 .albums__list
 	display: grid
 	gap: 50px
-	.album
-		@include badge()
-		padding: 20px
-		width: 100%
-		// display: flex
-		.album__info
-			margin-bottom: 15px
-			margin-right: 30px
-			hr
-				background: $grey
-				height: 1px
-				margin: 15px 0
-			h3
+.album
+	@include badge()
+	padding: 20px
+	width: 100%
+	// display: flex
+	.album__info
+		margin-bottom: 15px
+		margin-right: 30px
+		hr
+			background: $grey
+			height: 1px
+			margin: 15px 0
+		h3
+			font-weight: 700
+			color: $accent
+			font-size: 20px
+			margin-bottom: 12px
+		.album__authors
+			display: flex
+			align-items: center
+			column-gap: 10px
+
+			font-weight: 700
+			font-size: 16px
+			img
+				border-radius: 10px
+		.album__categories
+			margin-bottom: 12px
+			color: $greyTxt
+			font-weight: 400
+		.album__tags
+			display: flex
+			gap: 5px
+			margin-bottom: 12px
+		p
+			font-size: 16px
+		
+		.album__actions
+			display: flex
+			column-gap: 20px
+			span
+				font-size: 15px
 				font-weight: 700
-				color: $accent
-				font-size: 20px
-				margin-bottom: 12px
-			.album__authors
+			time, span
 				display: flex
 				align-items: center
-				column-gap: 10px
-
-				font-weight: 700
-				font-size: 16px
-				img
-					border-radius: 10px
-			.album__categories
-				margin-bottom: 12px
-				color: $greyTxt
-				font-weight: 400
-			.album__tags
-				display: flex
-				gap: 5px
-				margin-bottom: 12px
-			p
-				font-size: 16px
-			.album__actions
-				display: flex
-				column-gap: 20px
-				span
-					font-size: 15px
-					font-weight: 700
-				time, span
-					display: flex
-					align-items: center
-					column-gap: 2px
+				column-gap: 2px
+.album__img
+	border-radius: 8px 
+	img
+		border-radius: 8px 
