--- a/src/components/ui/Author/Author.sass
+++ b/src/components/ui/Author/Author.sass
@@ -1,3 +1,4 @@
+@import 'vars'
 .author
 	display: flex
 	align-items: center
@@ -5,6 +6,7 @@
 
 	font-weight: 700
 	font-size: 16px
-	margin: 13px 0
+	// margin: 13px 0
+	color: $color !important
 	img
 		border-radius: 10px
