--- a/src/components/ui/Author/Author.sass
+++ b/src/components/ui/Author/Author.sass
@@ -10,3 +10,9 @@
 	color: $color !important
 	img
 		border-radius: 10px
+	.author__content
+		display: grid
+		time
+			font-size: 12px
+			font-weight: 400
+			color: $greyTxt
