--- a/src/components/ui/Author/Author.sass
+++ b/src/components/ui/Author/Author.sass
@@ -8,6 +8,9 @@
 	font-size: 16px
 	// margin: 13px 0
 	color: $color !important
+	.default-avatar
+		border-radius: 50%
+		opacity: .7
 	img
 		border-radius: 10px
 	.author__content
