Many small fixes

--- a/src/components/Sidebar/Sidebar.sass
+++ b/src/components/Sidebar/Sidebar.sass
@@ -42,7 +42,21 @@
 			display: flex
 			flex-wrap: wrap
 			gap: 10px
-			
+	.sidebar__nav
+		display: grid
+		row-gap: 20px
+		justify-content: left
+		margin: 10px 0
+		span
+			font-size: 16px
+			font-weight: 700
+			color: $greyTxt
+			transition: transform .4s
+			&:hover
+				cursor: pointer
+				transform: scale(0.98)
+			&.sidebar__nav-active
+				color: $color
 	.sidebar__authors
 		.sidebar__authors-list
 			display: grid
