--- a/src/components/ui/Skeleton/Skeleton.sass
+++ b/src/components/ui/Skeleton/Skeleton.sass
@@ -2,10 +2,13 @@
 .skeleton
 	display: grid
 	row-gap: 30px
+	.skeleton__alone
+		height: 600px
+	.skeleton__plenty
+		height: 14rem 
 	.skeleton__in
 		border-radius: 8px
 		width: 100% 
-		height: 14rem 
 		background: $grey
 		animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite
 		.skeleton__in__in
