--- a/src/components/ui/Albums/Albums.sass
+++ b/src/components/ui/Albums/Albums.sass
@@ -1,4 +1,4 @@
-@import "styles/_system.sass"
+@import "vars"
 .need__sub
 	width: 100%
 	height: 100px
@@ -15,6 +15,7 @@
 	padding: 20px
 	width: 100%
 	// display: flex
+	color: $color
 	.album__info
 		margin-bottom: 15px
 		margin-right: 30px
