--- a/src/components/Quests/Quests.sass
+++ b/src/components/Quests/Quests.sass
@@ -40,3 +40,10 @@
 					align-items: center
 					font-size: 20px
 					column-gap: 4px
+@media screen and (width <= $md)
+
+	.quest__left
+		display: none
+	.quest__right
+		width: 100% !important
+		float: left
