--- a/src/components/ui/Button/Button.sass
+++ b/src/components/ui/Button/Button.sass
@@ -17,6 +17,10 @@
 	&.btn__black
 		color: $background
 		background: $color
+	&.btn__grey
+		background: $grey
+		color: $color
+		font-weight: 700
 	&.btn__accent
 		background: $accent
 		border: $accent solid 1px
