--- a/src/components/ui/Comments/Comments.sass
+++ b/src/components/ui/Comments/Comments.sass
@@ -1,6 +1,9 @@
 @import 'vars'
 .comments__wrapper
 	margin-top: 10px
+	.hasnt__comments
+		color: $greyTxt
+		margin-top: 20px
 	.comments__title
 		display: flex
 		align-items: center
