--- a/src/components/ui/Heading/Heading.sass
+++ b/src/components/ui/Heading/Heading.sass
@@ -1,3 +1,7 @@
+@import 'vars'
 .heading
 	font-size: clamp(40px, 1.2rem, 20px)
 	font-weight: 700
+@media screen and (width <= $md)
+	.heading
+		text-align: center
