--- a/src/components/Profile/components/Blog/Blog.sass
+++ b/src/components/Profile/components/Blog/Blog.sass
@@ -6,7 +6,8 @@
 		border-radius: 5px
 		margin-top: 20px
 	.blogs
-		display: grid
+		display: flex
+		flex-direction: column
 		row-gap: 10px
 		margin-top: 30px
 		.profile__blog
