--- a/src/components/Profile/components/Wallet/Wallet.sass
+++ b/src/components/Profile/components/Wallet/Wallet.sass
@@ -1,7 +1,8 @@
 @import 'vars'
 .profile__wallet
 	.profile__wallets
-		display: grid
+		display: flex
+		flex-direction: column
 		row-gap: 20px
 		margin-top: 30px
 		.wallet
