--- a/src/components/ui/Actions/Actions.sass
+++ b/src/components/ui/Actions/Actions.sass
@@ -7,9 +7,13 @@
 	display: flex
 	column-gap: 20px
 	color: $color
+	&::selection
+		background: $background 
+		color: $color
 	span
 		font-size: 15px
 		font-weight: 700
+	.actions__likes
 		cursor: pointer
 
 	time, span
