--- a/src/components/ui/Post/Post.sass
+++ b/src/components/ui/Post/Post.sass
@@ -3,6 +3,7 @@
 	@include badge()
 	padding: 20px
 	display: flex
+	max-height: 350px
 	justify-content: space-between
 	.post__info
 		// position: relative
