--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -14,12 +14,18 @@ body
 .badge
 	@include badge()
 .not-found
-	padding: 20px
+	// padding: 20px
+	font-size: 50px
+	color: $color
+	display: flex
+	justify-content: center
+	align-items: center
+	height: 100%
+	width: 100%
 	h1
 		font-weight: 500
 		span
 			font-weight: 700
-	font-size: 50px
 .posts
 	display: grid
 	row-gap: 30px
