--- a/src/components/ui/Albums/Albums.sass
+++ b/src/components/ui/Albums/Albums.sass
@@ -16,9 +16,14 @@
 	width: 100%
 	// display: flex
 	color: $color
+	position: relative
 	.album__info
 		margin-bottom: 15px
 		margin-right: 30px
+		.album__link::after
+				content: ''
+				position: absolute
+				inset: 0
 		hr
 			background: $grey
 			height: 1px
@@ -28,15 +33,8 @@
 			color: $accent
 			font-size: 20px
 			margin-bottom: 12px
-		.album__authors
-			display: flex
-			align-items: center
-			column-gap: 10px
-
-			font-weight: 700
-			font-size: 16px
-			img
-				border-radius: 10px
+			position: relative
+	
 		.album__categories
 			margin-bottom: 12px
 			color: $greyTxt
@@ -47,6 +45,8 @@
 			margin-bottom: 12px
 		p
 			font-size: 16px
+			position: relative
+
 		
 		.album__actions
 			display: flex
