--- a/src/components/ui/Post/Post.sass
+++ b/src/components/ui/Post/Post.sass
@@ -49,3 +49,13 @@
 .posts
 	display: grid
 	row-gap: 30px
+@media screen and (width <= $md)
+	.post
+		display: grid
+		max-height: 600px
+		.post__img
+			margin-top: 10px
+			width: 100%
+			height: 150px
+			img
+				width: 100%
