--- a/src/styles/_system.sass
+++ b/src/styles/_system.sass
@@ -27,6 +27,7 @@ $fontRegular: var(--font-regular)
 $fontMedium: var(--font-medium)
 
 $md: 1030px
+$containerWidth: 1170px
 $sidebarWidth: var(--sidebar-width)
 
 @mixin badge()
