Add Post add page

--- a/src/app/surveys/add/Add.sass
+++ b/src/app/surveys/add/Add.sass
@@ -8,8 +8,7 @@
 		margin-top: 30px
 		width: 100%
 		textarea
-			min-width: 100%
-			max-width: $containerWidth
+			resize: vertical
 		.surveys__add-checkbox
 			display: flex
 			align-items: center
