--- a/src/components/ui/Fields/Field/Field.sass
+++ b/src/components/ui/Fields/Field/Field.sass
@@ -11,3 +11,6 @@
 			padding: 16px 20px
 			border: $grey 1px solid
 			border-radius: 8px
+			&::spelling-error
+				text-decoration: none
+				background: rgb(255 0 0 / 0.25 )
