--- a/src/styles/_system.sass
+++ b/src/styles/_system.sass
@@ -28,6 +28,8 @@ $fontMedium: var(--font-medium)
 
 $md: 1030px
 $containerWidth: 1170px
+$mainWidthWithSidebar: calc( 100% - 300px )
+$mainWidthWithoutSidebar: calc( 100% - 400px )
 $sidebarWidth: var(--sidebar-width)
 
 @mixin badge()
