--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -39,10 +39,10 @@ body
 
 .main
 	&.main-profile
-		width: calc( 100% - 300px )
+		width: $mainWidthWithSidebar
 		float: left
 	&.main-with-sidebar:not(.main-profile)
-		width: calc( 100% - 400px )
+		width: $mainWidthWithoutSidebar
 		float: left
 	&.main-without-sidebar
 		width: 100% !important
