--- a/src/components/Sidebar/Sidebar.sass
+++ b/src/components/Sidebar/Sidebar.sass
@@ -8,7 +8,27 @@
 	width: 370px 
 	&.sidebar__profile
 		width: 270px !important
-
+	.sidebar__new
+		hr
+			margin: 20px 0 10px
+			background: $grey
+			height: 1px
+		p
+			font-size: 15px
+			font-weight: 500
+			color: $greyTxt
+		.sidebar__new-rules
+			display: flex
+			flex-direction: column
+			row-gap: 10px
+			margin-top: 10px
+			li
+				color: $greyTxt
+				display: flex
+				align-items: flex-start
+				column-gap: 15px
+				span
+					font-size: 15px
 	.sidebar__uniq
 		.sidebar__uniq-post
 			color: $color
