--- a/src/components/Sidebar/Sidebar.sass
+++ b/src/components/Sidebar/Sidebar.sass
@@ -6,6 +6,8 @@
 	background: $background
 	padding: 20px
 	width: 370px 
+	.skeleton__in, .skeleton__in__in
+		height: 150px !important
 	&.sidebar__profile
 		width: 270px !important
 	.sidebar__new
@@ -80,17 +82,18 @@
 			margin: 16px 0
 			background: $grey
 			height: 1px
+		
 		.sidebar__post
 			.sidebar__post-author
-				img
-					height: 32px
-					width: 32px
-					border-radius: 5px
 				font-size: 15px
 				display: flex
 				align-items: center
 				column-gap: 12px
 				margin-bottom: 16px
+				img
+					height: 32px
+					width: 32px
+					border-radius: 5px
 			h4
 				font-size: 16px
 				font-weight: 700
@@ -134,6 +137,10 @@
 					font-weight: 700
 					line-height: 22px
 					max-width: 200px
+					img
+						width: 44px
+						height: 44px
+						border-radius: 5px
 				.sidebar__author-sub
 					display: flex
 					align-items: center
