--- a/src/components/Footer/Footer.sass
+++ b/src/components/Footer/Footer.sass
@@ -1,15 +1,6 @@
-@import "./../../styles/global"
+@import "vars"
 .footer
-
-	width: 100%
-	background: $background
-
+	// background: $background
 	flex-shrink: 0
-
-	height: 100px
-
+	width: 100%
 	margin-top: 50px
-
-	display: flex
-	justify-content: center
-	align-items: center
