--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -1,8 +1,8 @@
-@import "./../../styles/global"
+@import "vars"
 .header
 	padding: 30px 0
-	background: $background
-
+	background: $globalBackground
+	border-bottom: solid 1px $grey
 	div
 		display: flex
 		justify-content: space-between
@@ -11,17 +11,19 @@
 			display: flex
 			column-gap: 10px
 	
-			button
+			button:not(.header__button-login)
 				width: 36px
 				height: 36px
-				background: $globalBackground
+				background: $grey
 				border-radius: 8px
 				transition: transform .4s, background .4s
 				&:hover
 					transform: scale(0.90)
 					background: $greyBg
 			.header__button-login
-				width: 60px
+				width: 65px
+				height: 100%
+				border-radius: 5px
 				color: $background
 				background: $accent
 						
