--- a/src/components/ui/Fields/Field/Field.sass
+++ b/src/components/ui/Fields/Field/Field.sass
@@ -11,6 +11,9 @@
 			padding: 16px 20px
 			border: $grey 1px solid
 			border-radius: 8px
+			transition: border .4s
+			&:focus
+				border: 1px solid $accent
 			&::spelling-error
 				text-decoration: none
 				background: rgb(255 0 0 / 0.25 )
