--- a/src/components/ui/Button/Button.sass
+++ b/src/components/ui/Button/Button.sass
@@ -3,9 +3,10 @@
 	font-weight: 500
 	letter-spacing: 1px
 	line-height: 19.12px
-	transition: transform .4s, background-color .4s, color .4s
+	transition: transform .4s ease-out, background-color .4s ease-out, color .4s ease-out, border .4s ease-out
 	&:hover
-		transform: scale(0.95)
+		transform: scale(0.95) rotate(1.5deg)
+		
 	&.btn__pagination
 		width: 40px
 		height: 40px
@@ -17,10 +18,26 @@
 	&.btn__black
 		color: $background
 		background: $color
+		&:hover
+			background: none
+			border: solid 1px $color
+			color: $color
+		&:active
+			background: #1A325C
+			color: $background
+		&:disabled
+			opacity: 0.5
+			transform: scale(0.95)
+
 	&.btn__grey
 		background: $grey
 		color: $color
 		font-weight: 700
+		&:hover
+			// border: solid 1px $color
+			-webkit-box-shadow: 0px 0px 31px -19px rgba(39, 63, 105, 0.25)
+			-moz-box-shadow: 0px 0px 31px -19px rgba(39, 63, 105, 0.25)
+			box-shadow: 0px 0px 31px -19px rgba(39, 63, 105, 0.25)
 	&.btn__accent
 		background: $accent
 		border: $accent solid 1px
