Small fix & Fix Cycles and Surveys

--- a/src/components/Sidebar/Sidebar.sass
+++ b/src/components/Sidebar/Sidebar.sass
@@ -132,6 +132,7 @@
 				align-items: center
 				.sidebar__author-info
 					display: flex
+					align-items: center
 					gap: 0 10px
 					font-size: 16px
 					font-weight: 700
@@ -144,7 +145,7 @@
 				.sidebar__author-sub
 					display: flex
 					align-items: center
-					gap: 0
+					gap: 5px
 	.sidebar__subscribes
 		display: grid
 		row-gap: 20px
