Fix Main styles & Start New Quest

--- a/src/components/Sidebar/Sidebar.sass
+++ b/src/components/Sidebar/Sidebar.sass
@@ -8,7 +8,7 @@
 	width: 370px 
 	.skeleton__in, .skeleton__in__in
 		height: 150px !important
-	&.sidebar__profile
+	&.sidebar__small
 		width: 270px !important
 	.sidebar__new
 		hr
@@ -122,6 +122,7 @@
 				transform: scale(0.98)
 			&.sidebar__nav-active
 				color: $color
+				
 	.sidebar__authors
 		.sidebar__authors-list
 			display: grid
