--- a/src/components/ui/Fields/Field/Field.sass
+++ b/src/components/ui/Fields/Field/Field.sass
@@ -13,6 +13,7 @@
 			border-radius: 8px
 			transition: border .4s
 			&:focus
+				outline: none !important
 				border: 1px solid $accent
 			&::spelling-error
 				text-decoration: none
