--- a/src/app/quests/add/components/Content/Content.sass
+++ b/src/app/quests/add/components/Content/Content.sass
@@ -2,7 +2,7 @@
 .content
 	.content__buttons
 		display: flex
-		justify-content: end
+		justify-content: flex-end
 		gap: 30px
 		margin: 30px 0
 		button
